css/flowplayer.css
/* ... */
.flowplayer .fp-volume { text-align: left; }
#content .flowplayer a, .flowplayer a, .flowplayer a:hover { text-decoration: none; border-bottom: none; }

.flowplayer .wpfp_custom_ad { display: none; overflow: hidden; }  	
.flowplayer .wpfp_custom_ad img { height: auto; }  	
.flowplayer.is-playing .wpfp_custom_ad, .flowplayer.is-ready .wpfp_custom_ad { display: block; }  
.flowplayer.is-poster .wpfp_custom_ad { display: none; }  

.fv_fp_close { position: absolute; right: 2px; top: 2px; z-index: 2; }
.fv_fp_close a { display: block; width: 16px; height: 16px; background: url(img/exit_btn.png) }

.wpfp_custom_ad_content h1, .wpfp_custom_ad_content h2, .wpfp_custom_ad_content h3, 	.wpfp_custom_ad_content h4, .wpfp_custom_ad_content h5, .wpfp_custom_ad_content p { padding: 0 5px 2px 5px; margin: 0 5px 2px 5px; }

.flowplayer.alignleft { margin-left: 10px; margin-bottom: 10px;  }
.flowplayer.alignright { margin-right: 10px; margin-bottom: 10px; }

.flowplayer.no-controlbar .fp-controls{display:none}
.flowplayer.no-controlbar .fp-time{display:none}

p.fp-caption { text-align: center; }

/* initially hide speed buttons while they cannot be used */
.is-splash.flowplayer .fv-player-buttons, .is-loading.flowplayer .fv-player-buttons {
  display: none;
}
.fv-player-buttons-center {
  position: absolute;
  left: 50%;
	margin-left: -34px;
  bottom: 30px;
}
.fv-player-buttons > ul {
  position: relative;
  z-index: 20; /* make clickable */
  display: block;
  opacity: 1;
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
  margin: 0 auto;
}
.fv-player-buttons > ul:last {
  margin-left: 0px;
}
.fv-player-buttons-right {
  position: absolute;
  right: 0;
  bottom: 30px;
}
.fv-player-buttons-right > ul {
  /*position: relative;
  left: -95%;*/
}
.fv-player-buttons-left {
  position: absolute;
  left: 0;
  bottom: 30px;
}
.fv-player-buttons-left > ul {  
  left: 0;
}
.is-mouseout .fv-player-buttons > ul {
  opacity: 0;
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
  /* same transition as other ui elements like fullscreen */
  -webkit-transition: opacity .15s ease .3s;
  -moz-transition: opacity .15s ease .3s;
  transition: opacity .15s ease .3s;
}
.fv-player-buttons li {
  display: inline-block;
  float: left;
  margin: 0 0.3em;
}
.fv-player-buttons a {
  display: inline-block;
  float: left;  
  padding: 0.4ex 0.6ex;
  margin: 0.5ex 0;
  width: 100%;
  text-align: center;
  font-weight: 400;
  background-color: #ccc;
  background-color: rgba(255,255,255,0.5);
  color: #fff;
  cursor: pointer;
  line-height: 1.3em;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
     -webkit-transition: background-color 0.2s ease-out;
    -moz-transition: background-color 0.2s ease-out;
    -o-transition: background-color 0.2s ease-out;
    transition: background-color 0.2s ease-out; 
	font-size: 14px;
	box-sizing: border-box;
}
.fv-player-buttons a:active {
	background-color: rgba(255,255,255,0.85);
}
.fv-player-buttons a.current {
	color: #00a7c8;
  background-color: #555;
  cursor: default;
}
.fv-player-buttons a.fv_sp_slower {
  -webkit-border-radius: 1ex 0 0 1ex;
  -moz-border-radius: 1ex 0 0 1ex;
  border-radius: 1ex 0 0 1ex;
  margin-right: 2px;
  width: 2.05em;
}
.fv-player-buttons a.fv_sp_faster {
  -webkit-border-radius: 0 1ex 1ex 0;
  -moz-border-radius: 0 1ex 1ex 0;
  border-radius: 0 1ex 1ex 0;
  width: 2em;
}
.fv-player-speed li {
  margin: 0;
}

/*
MediaElement.js
*/
.mejs-container{position:relative;background:#000;font-family:Helvetica,Arial;text-align:left;vertical-align:top;text-indent:0; margin: 0 auto 28px auto; }
/* ... */

